# seedsigner_seedqr_py3.11

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: Exploring_seedsigner_code.md  Exploring_seedsigner_code.txt  README.md  export_xpub.md  notes.txt
src/: README.md  display_seedqr.py  encode_xpub.py  record_video.py  seed_xpub_5address_psbt.py  tk_oop_seedqr_animated (copy).py  tk_oop_seedqr_animated.py  tk_seedqr.py  tk_seedqr_animated.py
src/helpers/: embit_utils.py  qr.py
src/helpers/ur2/: bytewords.py  cbor_lite.py  constants.py  crc32.py  fountain_decoder.py  fountain_encoder.py  fountain_utils.py  random_sampler.py  ur.py  ur_decoder.py  ur_encoder.py  utils.py  xoshiro256.py
src/models/: decode_qr.py  encode_qr.py  qr_type.py  seed.py  zzz_settings_definition.py
